# Space-Invader-Breakout

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  Common.cpp  Dot.cpp  Dot.h  Gameplay.cpp  Gameplay.h  GameplayController.cpp  GameplayController.h  LTexture.cpp  LTexture.h  Makefile  Obstacle.cpp  Obstacle.h  Paddle.cpp  Paddle.h  Projectile.cpp  Projectile.h  Setup.cpp  Setup.h  WindowController.cpp  WindowController.h  common.cpp  common.h  main.cpp
tests/: CMakeLists.txt  Test-Common  Test-Common.cpp  Test-Dot.cpp
